src/main/gen/io/github/ambalashov/structurizr/parser/StructurizrParser.java
// This is a generated file. Not intended for manual editing.
package io.github.ambalashov.structurizr.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static io.github.ambalashov.structurizr.psi.StructurizrTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class StructurizrParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return structurizrFile(b, l + 1);
  }

  /* ********************************************************** */
  // 'autoLayout'
  public static boolean auto_layout_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "auto_layout_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AUTO_LAYOUT_EXPR, "<auto layout expr>");
    r = consumeToken(b, "autoLayout");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // [identifier '='] component item_name [description] [technology] [tags]
  // ('{' (relation_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF)* '}')?
  public static boolean component_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_expr")) return false;
    if (!nextTokenIs(b, "<component expr>", COMPONENT, ID_TOKEN)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPONENT_EXPR, "<component expr>");
    r = component_expr_0(b, l + 1);
    r = r && consumeToken(b, COMPONENT);
    r = r && item_name(b, l + 1);
    r = r && component_expr_3(b, l + 1);
    r = r && component_expr_4(b, l + 1);
    r = r && component_expr_5(b, l + 1);
    r = r && component_expr_6(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [identifier '=']
  private static boolean component_expr_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_expr_0")) return false;
    component_expr_0_0(b, l + 1);
    return true;
  }

  // identifier '='
  private static boolean component_expr_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_expr_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    r = r && consumeToken(b, EQ);
    exit_section_(b, m, null, r);
    return r;
  }

  // [description]
  private static boolean component_expr_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_expr_3")) return false;
    description(b, l + 1);
    return true;
  }

  // [technology]
  private static boolean component_expr_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_expr_4")) return false;
    technology(b, l + 1);
    return true;
  }

  // [tags]
  private static boolean component_expr_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_expr_5")) return false;
    tags(b, l + 1);
    return true;
  }

  // ('{' (relation_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF)* '}')?
  private static boolean component_expr_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_expr_6")) return false;
    component_expr_6_0(b, l + 1);
    return true;
  }

  // '{' (relation_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF)* '}'
  private static boolean component_expr_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_expr_6_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LB);
    r = r && component_expr_6_0_1(b, l + 1);
    r = r && consumeToken(b, RB);
    exit_section_(b, m, null, r);
    return r;
  }

  // (relation_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF)*
  private static boolean component_expr_6_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_expr_6_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!component_expr_6_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "component_expr_6_0_1", c)) break;
    }
    return true;
  }

  // relation_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF
  private static boolean component_expr_6_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_expr_6_0_1_0")) return false;
    boolean r;
    r = relation_expr(b, l + 1);
    if (!r) r = identifier_ref(b, l + 1);
    if (!r) r = dsl_include(b, l + 1);
    if (!r) r = consumeToken(b, COMMENT);
    if (!r) r = consumeToken(b, CRLF);
    return r;
  }

  /* ********************************************************** */
  // component identifier_ref [key] [description] '{'
  //   (view_item_)*
  // '}'
  public static boolean component_view_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_view_expr")) return false;
    if (!nextTokenIs(b, COMPONENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMPONENT);
    r = r && identifier_ref(b, l + 1);
    r = r && component_view_expr_2(b, l + 1);
    r = r && component_view_expr_3(b, l + 1);
    r = r && consumeToken(b, LB);
    r = r && component_view_expr_5(b, l + 1);
    r = r && consumeToken(b, RB);
    exit_section_(b, m, COMPONENT_VIEW_EXPR, r);
    return r;
  }

  // [key]
  private static boolean component_view_expr_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_view_expr_2")) return false;
    key(b, l + 1);
    return true;
  }

  // [description]
  private static boolean component_view_expr_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_view_expr_3")) return false;
    description(b, l + 1);
    return true;
  }

  // (view_item_)*
  private static boolean component_view_expr_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_view_expr_5")) return false;
    while (true) {
      int c = current_position_(b);
      if (!component_view_expr_5_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "component_view_expr_5", c)) break;
    }
    return true;
  }

  // (view_item_)
  private static boolean component_view_expr_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_view_expr_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = view_item_(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // [identifier '='] container item_name [description] [technology] [tags]
  // ('{' (component_expr
  //   | group_container_expr
  //   | relation_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF)* '}')?
  public static boolean container_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_expr")) return false;
    if (!nextTokenIs(b, "<container expr>", CONTAINER, ID_TOKEN)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONTAINER_EXPR, "<container expr>");
    r = container_expr_0(b, l + 1);
    r = r && consumeToken(b, CONTAINER);
    r = r && item_name(b, l + 1);
    r = r && container_expr_3(b, l + 1);
    r = r && container_expr_4(b, l + 1);
    r = r && container_expr_5(b, l + 1);
    r = r && container_expr_6(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [identifier '=']
  private static boolean container_expr_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_expr_0")) return false;
    container_expr_0_0(b, l + 1);
    return true;
  }

  // identifier '='
  private static boolean container_expr_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_expr_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    r = r && consumeToken(b, EQ);
    exit_section_(b, m, null, r);
    return r;
  }

  // [description]
  private static boolean container_expr_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_expr_3")) return false;
    description(b, l + 1);
    return true;
  }

  // [technology]
  private static boolean container_expr_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_expr_4")) return false;
    technology(b, l + 1);
    return true;
  }

  // [tags]
  private static boolean container_expr_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_expr_5")) return false;
    tags(b, l + 1);
    return true;
  }

  // ('{' (component_expr
  //   | group_container_expr
  //   | relation_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF)* '}')?
  private static boolean container_expr_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_expr_6")) return false;
    container_expr_6_0(b, l + 1);
    return true;
  }

  // '{' (component_expr
  //   | group_container_expr
  //   | relation_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF)* '}'
  private static boolean container_expr_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_expr_6_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LB);
    r = r && container_expr_6_0_1(b, l + 1);
    r = r && consumeToken(b, RB);
    exit_section_(b, m, null, r);
    return r;
  }

  // (component_expr
  //   | group_container_expr
  //   | relation_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF)*
  private static boolean container_expr_6_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_expr_6_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!container_expr_6_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "container_expr_6_0_1", c)) break;
    }
    return true;
  }

  // component_expr
  //   | group_container_expr
  //   | relation_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF
  private static boolean container_expr_6_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_expr_6_0_1_0")) return false;
    boolean r;
    r = component_expr(b, l + 1);
    if (!r) r = group_container_expr(b, l + 1);
    if (!r) r = relation_expr(b, l + 1);
    if (!r) r = identifier_ref(b, l + 1);
    if (!r) r = dsl_include(b, l + 1);
    if (!r) r = consumeToken(b, COMMENT);
    if (!r) r = consumeToken(b, CRLF);
    return r;
  }

  /* ********************************************************** */
  // container identifier_ref [key] [description] '{'
  //   (view_item_)*
  // '}'
  public static boolean container_view_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_view_expr")) return false;
    if (!nextTokenIs(b, CONTAINER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CONTAINER);
    r = r && identifier_ref(b, l + 1);
    r = r && container_view_expr_2(b, l + 1);
    r = r && container_view_expr_3(b, l + 1);
    r = r && consumeToken(b, LB);
    r = r && container_view_expr_5(b, l + 1);
    r = r && consumeToken(b, RB);
    exit_section_(b, m, CONTAINER_VIEW_EXPR, r);
    return r;
  }

  // [key]
  private static boolean container_view_expr_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_view_expr_2")) return false;
    key(b, l + 1);
    return true;
  }

  // [description]
  private static boolean container_view_expr_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_view_expr_3")) return false;
    description(b, l + 1);
    return true;
  }

  // (view_item_)*
  private static boolean container_view_expr_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_view_expr_5")) return false;
    while (true) {
      int c = current_position_(b);
      if (!container_view_expr_5_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "container_view_expr_5", c)) break;
    }
    return true;
  }

  // (view_item_)
  private static boolean container_view_expr_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_view_expr_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = view_item_(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // QUOTED_TEXT
  public static boolean description(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "description")) return false;
    if (!nextTokenIs(b, QUOTED_TEXT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, QUOTED_TEXT);
    exit_section_(b, m, DESCRIPTION, r);
    return r;
  }

  /* ********************************************************** */
  // include_keyword (include_file)
  public static boolean dsl_include(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dsl_include")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DSL_INCLUDE, "<dsl include>");
    r = include_keyword(b, l + 1);
    r = r && dsl_include_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (include_file)
  private static boolean dsl_include_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dsl_include_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = include_file(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'element' key ('{'
  //   (COMMENT | CRLF | shape_expr)*
  // '}')?
  public static boolean element_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ELEMENT_EXPR, "<element expr>");
    r = consumeToken(b, "element");
    r = r && key(b, l + 1);
    r = r && element_expr_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('{'
  //   (COMMENT | CRLF | shape_expr)*
  // '}')?
  private static boolean element_expr_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_expr_2")) return false;
    element_expr_2_0(b, l + 1);
    return true;
  }

  // '{'
  //   (COMMENT | CRLF | shape_expr)*
  // '}'
  private static boolean element_expr_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_expr_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LB);
    r = r && element_expr_2_0_1(b, l + 1);
    r = r && consumeToken(b, RB);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMENT | CRLF | shape_expr)*
  private static boolean element_expr_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_expr_2_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!element_expr_2_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "element_expr_2_0_1", c)) break;
    }
    return true;
  }

  // COMMENT | CRLF | shape_expr
  private static boolean element_expr_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_expr_2_0_1_0")) return false;
    boolean r;
    r = consumeToken(b, COMMENT);
    if (!r) r = consumeToken(b, CRLF);
    if (!r) r = shape_expr(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // 'exclude' include_item_+
  public static boolean exclude_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "exclude_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXCLUDE_EXPR, "<exclude expr>");
    r = consumeToken(b, "exclude");
    r = r && exclude_expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // include_item_+
  private static boolean exclude_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "exclude_expr_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = include_item_(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!include_item_(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "exclude_expr_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // identifier_decl group item_name ('{'
  //     (component_expr
  //     | relation_expr
  //     | group_container_expr
  //     | identifier_ref
  //     | dsl_include
  //     | COMMENT | CRLF)*
  //   '}')?
  public static boolean group_container_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "group_container_expr")) return false;
    if (!nextTokenIs(b, "<group container expr>", GROUP, ID_TOKEN)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, GROUP_CONTAINER_EXPR, "<group container expr>");
    r = identifier_decl(b, l + 1);
    r = r && consumeToken(b, GROUP);
    r = r && item_name(b, l + 1);
    r = r && group_container_expr_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('{'
  //     (component_expr
  //     | relation_expr
  //     | group_container_expr
  //     | identifier_ref
  //     | dsl_include
  //     | COMMENT | CRLF)*
  //   '}')?
  private static boolean group_container_expr_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "group_container_expr_3")) return false;
    group_container_expr_3_0(b, l + 1);
    return true;
  }

  // '{'
  //     (component_expr
  //     | relation_expr
  //     | group_container_expr
  //     | identifier_ref
  //     | dsl_include
  //     | COMMENT | CRLF)*
  //   '}'
  private static boolean group_container_expr_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "group_container_expr_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LB);
    r = r && group_container_expr_3_0_1(b, l + 1);
    r = r && consumeToken(b, RB);
    exit_section_(b, m, null, r);
    return r;
  }

  // (component_expr
  //     | relation_expr
  //     | group_container_expr
  //     | identifier_ref
  //     | dsl_include
  //     | COMMENT | CRLF)*
  private static boolean group_container_expr_3_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "group_container_expr_3_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!group_container_expr_3_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "group_container_expr_3_0_1", c)) break;
    }
    return true;
  }

  // component_expr
  //     | relation_expr
  //     | group_container_expr
  //     | identifier_ref
  //     | dsl_include
  //     | COMMENT | CRLF
  private static boolean group_container_expr_3_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "group_container_expr_3_0_1_0")) return false;
    boolean r;
    r = component_expr(b, l + 1);
    if (!r) r = relation_expr(b, l + 1);
    if (!r) r = group_container_expr(b, l + 1);
    if (!r) r = identifier_ref(b, l + 1);
    if (!r) r = dsl_include(b, l + 1);
    if (!r) r = consumeToken(b, COMMENT);
    if (!r) r = consumeToken(b, CRLF);
    return r;
  }

  /* ********************************************************** */
  // identifier_decl group item_name ('{'
  //   ( software_system_expr
  //   | relation_expr
  //   | group_ss_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF)*
  // '}')?
  public static boolean group_model_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "group_model_expr")) return false;
    if (!nextTokenIs(b, "<group model expr>", GROUP, ID_TOKEN)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, GROUP_MODEL_EXPR, "<group model expr>");
    r = identifier_decl(b, l + 1);
    r = r && consumeToken(b, GROUP);
    r = r && item_name(b, l + 1);
    r = r && group_model_expr_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('{'
  //   ( software_system_expr
  //   | relation_expr
  //   | group_ss_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF)*
  // '}')?
  private static boolean group_model_expr_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "group_model_expr_3")) return false;
    group_model_expr_3_0(b, l + 1);
    return true;
  }

  // '{'
  //   ( software_system_expr
  //   | relation_expr
  //   | group_ss_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF)*
  // '}'
  private static boolean group_model_expr_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "group_model_expr_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LB);
    r = r && group_model_expr_3_0_1(b, l + 1);
    r = r && consumeToken(b, RB);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( software_system_expr
  //   | relation_expr
  //   | group_ss_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF)*
  private static boolean group_model_expr_3_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "group_model_expr_3_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!group_model_expr_3_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "group_model_expr_3_0_1", c)) break;
    }
    return true;
  }

  // software_system_expr
  //   | relation_expr
  //   | group_ss_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF
  private static boolean group_model_expr_3_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "group_model_expr_3_0_1_0")) return false;
    boolean r;
    r = software_system_expr(b, l + 1);
    if (!r) r = relation_expr(b, l + 1);
    if (!r) r = group_ss_expr(b, l + 1);
    if (!r) r = identifier_ref(b, l + 1);
    if (!r) r = dsl_include(b, l + 1);
    if (!r) r = consumeToken(b, COMMENT);
    if (!r) r = consumeToken(b, CRLF);
    return r;
  }

  /* ********************************************************** */
  // identifier_decl group item_name ('{'
  //   (container_expr
  //   | relation_expr
  //   | group_ss_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF)* '}')?
  public static boolean group_ss_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "group_ss_expr")) return false;
    if (!nextTokenIs(b, "<group ss expr>", GROUP, ID_TOKEN)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, GROUP_SS_EXPR, "<group ss expr>");
    r = identifier_decl(b, l + 1);
    r = r && consumeToken(b, GROUP);
    r = r && item_name(b, l + 1);
    r = r && group_ss_expr_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('{'
  //   (container_expr
  //   | relation_expr
  //   | group_ss_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF)* '}')?
  private static boolean group_ss_expr_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "group_ss_expr_3")) return false;
    group_ss_expr_3_0(b, l + 1);
    return true;
  }

  // '{'
  //   (container_expr
  //   | relation_expr
  //   | group_ss_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF)* '}'
  private static boolean group_ss_expr_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "group_ss_expr_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LB);
    r = r && group_ss_expr_3_0_1(b, l + 1);
    r = r && consumeToken(b, RB);
    exit_section_(b, m, null, r);
    return r;
  }

  // (container_expr
  //   | relation_expr
  //   | group_ss_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF)*
  private static boolean group_ss_expr_3_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "group_ss_expr_3_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!group_ss_expr_3_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "group_ss_expr_3_0_1", c)) break;
    }
    return true;
  }

  // container_expr
  //   | relation_expr
  //   | group_ss_expr
  //   | identifier_ref
  //   | dsl_include
  //   | COMMENT | CRLF
  private static boolean group_ss_expr_3_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "group_ss_expr_3_0_1_0")) return false;
    boolean r;
    r = container_expr(b, l + 1);
    if (!r) r = relation_expr(b, l + 1);
    if (!r) r = group_ss_expr(b, l + 1);
    if (!r) r = identifier_ref(b, l + 1);
    if (!r) r = dsl_include(b, l + 1);
    if (!r) r = consumeToken(b, COMMENT);
    if (!r) r = consumeToken(b, CRLF);
    return r;
  }

  /* ********************************************************** */
  // ID_TOKEN
  public static boolean identifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "identifier")) return false;
    if (!nextTokenIs(b, ID_TOKEN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID_TOKEN);
    exit_section_(b, m, IDENTIFIER, r);
    return r;
  }

  /* ********************************************************** */
  // [identifier '=']
  static boolean identifier_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "identifier_decl")) return false;
    identifier_decl_0(b, l + 1);
    return true;
  }
